--- a/transformations.tex
+++ b/transformations.tex
@@ -1,10 +1,11 @@
-\documentclass[]{jreport}
+\documentclass[a4paper]{report}
 \usepackage{amsmath, amssymb}
 \usepackage{type1cm}
 \usepackage{bm}
 \begin{document}
 
 \part{はじめに}
+piyopiyo
 \chapter{概要}
 この文書では私がよく使うくせに, 自己の記憶媒体に中々収まりきらない式変形等をまとめたものである.
 
@@ -35,10 +36,10 @@ $A^*A=E_n$ $\Leftrightarrow$ $n$次正方行列$A$がUnitary行列.\\
         \cos3\theta=4\cos^3\theta-3\cos\theta
     \end{array}
 \end{equation}
-\subsection{覚え方}
-「サンシャイン引いて, 夜風が身に染みる. 」
+\subsection{導出の手続き}
+hoge
 \subsubsection{注意}
-余弦は, そのまま正弦を余弦に書き換えて右辺の符号を入れ替える.
+hoge
 
 \section{積和の公式}
 \begin{equation}
@@ -49,10 +50,10 @@ $A^*A=E_n$ $\Leftrightarrow$ $n$次正方行列$A$がUnitary行列.\\
         \cos\alpha\cos\beta=-\frac{\cos(\alpha+\beta)+\cos(\alpha-\beta)}{2}
     \end{array}
 \end{equation}
-\subsection{覚え方}
-「」
+\subsection{導出の手続き}
+加法定理の加減から導出する.
 \subsubsection{注意}
-加法定理の加減で導出する.
+hoge
 
 \section{和積の公式}
 \begin{equation}
@@ -63,10 +64,10 @@ $A^*A=E_n$ $\Leftrightarrow$ $n$次正方行列$A$がUnitary行列.\\
         \cos A-\cos B=-2\sin\frac{A+B}{2}\sin\frac{A-B}{2}
     \end{array}
 \end{equation}
-\subsection{覚え方}
-「」
-\subsubsection{注意}
+\subsection{導出の手続き}
 積和の公式から導出する.
+\subsubsection{注意}
+$\alpha+\beta$と置き換える.
 
 \chapter{積分}
 \section{6分の1公式}
@@ -88,7 +89,7 @@ $A^*A=E_n$ $\Leftrightarrow$ $n$次正方行列$A$がUnitary行列.\\
 \chapter{微分方程式}
 \section{常微分方程式}
 \subsection{定数係数2階線形微分方程式}
-$a$, $b$を実定数とし, 2階斉次微分方程式$y''+ay'+by=0$を考える.特性方程式$\lambda^2+a\lambda+b=0$の2根を$\lambda_{1}$, $\lambda_{2}$とする. このとき, 一般解$y(x)$は, $C_{1}$, $C_{2}$を任意定数として, \\
+$a$, $b$を実定数とし, 2階斉次微分方程式$y''+ay'+by=0$を考える.特性方程式$\lambda^2+a\lambda+b=0$の2根を$\lambda_{1}$, $\lambda_{2}$とする. このとき, 一般解$y(x)$は, $C_{1}$, $C_{2}$を任意定数として, 
 \begin{equation}
     y(x)= \left \{
         \begin{array}{l}
